After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 741798 - Various fixes related to gtk3 port
Various fixes related to gtk3 port
Status: RESOLVED FIXED
Product: buoh
Classification: Other
Component: General
git master
Other Linux
: Normal normal
: ---
Assigned To: buoh-maint
buoh-maint
Depends on:
Blocks:
 
 
Reported: 2014-12-19 23:38 UTC by Balló György
Modified: 2019-01-23 18:07 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
[PATCH] Various fixes related to gtk3 port (3.68 KB, patch)
2014-12-19 23:38 UTC, Balló György
committed Details | Review

Description Balló György 2014-12-19 23:38:01 UTC
Created attachment 293117 [details] [review]
[PATCH] Various fixes related to gtk3 port

- Don't disable scrollbars, otherwise the window cannot be resized
- Fix the alignment size of the intro text to make it visible
- Set the default size of main window
Comment 1 Jan Tojnar 2019-01-23 18:06:43 UTC
Comment on attachment 293117 [details] [review]
[PATCH] Various fixes related to gtk3 port

Committed as https://gitlab.gnome.org/GNOME/buoh/commit/8d2af951bd6b31ed491a26606139cf0959ad084c
Comment 2 Jan Tojnar 2019-01-23 18:07:11 UTC
This problem has been fixed in the unstable development version. The fix will be available in the next major software release. You may need to upgrade your Linux distribution to obtain that newer version.