Various fixes related to gtk3 port

- Don't disable scrollbars, otherwise the window cannot be resized
- Set the default size of main window

https://bugzilla.gnome.org/show_bug.cgi?id=741798